# naskets

./: .gitignore  Makefile  README.md  naskets.cabal
examples/: Args.nsk  CoerceLoop.nsk  Eq.nsk  ListCounter.nsk  MuMuIso.nsk  Perfect.nsk  RecordsBench.nsk  RollTest.nsk
src/: Equiv.hs  Eval.hs  Main.hs  Parser.hs  Pretty.hs  Run.hs  Syntax.hs  Typechecker.hs  Utils.hs
